[前準備]ktlint
## 公式設定とは異なる点

- モジュール
    - 公式：com.pinterest.ktlint:ktlint-cli:1.0.1
    - 修正：com.pinterest:ktlint:0.50.0
- オプション（ktlintCheck）
    - 公式設定に以下を追加
    - "--android"
    - "--reporter=plain"
    - "--color"
    - "--reporter=checkstyle,output=${project.buildDir}/reports/ktlint/results.xml"
- オプション（ktlintFormat）
    - 公式設定に以下を追加
    - "--android"
    - "--reporter=plain"
    - "--color"
    - "--reporter=checkstyle"